--- a/berdilia-master/conf/application.ini
+++ b/berdilia-master/conf/application.ini
@@ -3,8 +3,8 @@ application_version = 0.4.3
 ; from datetime import datetime, timedelta
 ; str((datetime.utcnow()).replace(microsecond=0).isoformat()) + 'Z'
 app_modified_time =
-AWS_ACCESS_KEY_ID = AKIA5PTYDAV4B5PICD2F
-application_secret = Li8074H1gvj10/lNpO1GjE3FDtgPbmXTHs5N/v63
+AWS_ACCESS_KEY_ID = 
+application_secret = 
 aws_region = us-east-1
 debug = True
 site_domain =
