--- a/berdilia-master/conf/application.ini
+++ b/berdilia-master/conf/application.ini
@@ -5,7 +5,7 @@ application_version = 0.4.3
 app_modified_time =
 AWS_ACCESS_KEY_ID = 
 application_secret = 
-aws_region = us-east-1
+aws_region = 
 debug = True
 site_domain =
 img_width = 224
